handle text overflow and other miscellaneous style issues

--- a/web/src/action-sheet/action-sheet.styl
+++ b/web/src/action-sheet/action-sheet.styl
@@ -1,6 +1,7 @@
 .action-sheet {
   background: rgba(0, 0, 0, 0.7);
   @extend .fill-container;
+  z-index: 100;
 
   .container {
     background: light-color;
