--- a/web/src/login/login.styl
+++ b/web/src/login/login.styl
@@ -1,5 +1,5 @@
 .login {
-  padding-top: 2.4em;
+  padding-top: unit;
 
   .error {
     color: error-color;
